# conformingNURBS

./: .gitignore  CMakeLists.txt
include/: AnalysisElement.h  BSplineSpace.h  BezierNodalElement.h  BezierVectorElement.h  BoundingBoxIterator.h  DOFManager.h  Forest.h  Geometry.h  GeometryElement.h  HCElement.h  HConformingForest.h  IElem.h  InputDataStructures.h  MultiForest.h  MultithreadBEM.h  NURBSCache.h  NURBSCommon.h  NURBSCurve.h  NURBSSurface.h  NedelecVectorElement.h  NodalElement.h  Norm.h  OutputVTK.h  Point.h  Point3D.h  Point4D.h  algebra.h  base.h  emag.h
include/2D/: AnalysisElement2D.h  BSplineSpace2D.h  Forest2D.h  Geometry2D.h  GeometryElement2D.h
include/quadrature/: IBaseIntegrate.h  IEdgePolarIntegrate.h  IEdgeQuadrature.h  IElemIntegrate.h  IEqualQuadrature.h  IEqualQuadratureTri.h  IGalerkinIntegrate.h  IGaussQuadrature1D.h  IPolarDegenerate.h  IPolarIntegrate.h  IRegularQuadrature.h  ISubElem.h  ISubElemIntegrate.h  ITellesIntegrate.h  IVertexQuadrature.h
src/: BSplineSpace.cpp  BezierNodalElement.cpp  BezierVectorElement.cpp  BoundingBoxIterator.cpp  Forest.cpp  Geometry.cpp  GeometryElement.cpp  HCElement.cpp  HConformingForest.cpp  MultiForest.cpp  NURBSCommon.cpp  NURBSCurve.cpp  NURBSSurface.cpp  NedelecVectorElement.cpp  Norm.cpp  OutputVTK.cpp  Point.cpp  Point3D.cpp  Point4D.cpp  PrimalForest.cpp  algebra.cpp  base.cpp  emag.cpp
src/2D/: AnalysisElement2D.cpp  BSplineSpace2D.cpp  Forest2D.cpp  Geometry2D.cpp  GeometryElement2D.cpp
src/quadrature/: IEdgePolarIntegrate.cpp  IEdgeQuadrature.cpp  IElemIntegrate.cpp  IEqualQuadrature.cpp  IEqualQuadratureTri.cpp  IGalerkinIntegrate.cpp  IGaussQuadrature1D.cpp  IPolarDegenerate.cpp  IPolarIntegrate.cpp  IRegularQuadrature.cpp  ISubElem.cpp  ITellesIntegrate.cpp  IVertexQuadrature.cpp
test/: BernsteinPolynomialTest.cpp  BezierDecomposition.cpp  BezierExtractionTest.cpp  BoundingBoxTest.cpp  CMakeLists.txt  ConformingLagrangeTest.cpp  DegenerateTest.cpp  GalerkinQuadratureTest.cpp  HBSReadTest.cpp  ParametricQuadratureTest.cpp  SingularitySubtractionTest.cpp  WangQuadratureTest.cpp  polarDegenerateTest.cpp
