add_executable(hbsreadtest HBSReadTest.cpp)
add_executable(bbtest BoundingBoxTest.cpp)
add_executable(bernsteintest BernsteinPolynomialTest.cpp)
add_executable(beziertest BezierExtractionTest.cpp)
add_executable(galerkinquadraturetest GalerkinQuadratureTest.cpp)
add_executable(bezierextractiontest BezierDecomposition.cpp)

target_link_libraries(hbsreadtest confnurbs)
target_link_libraries(bbtest confnurbs )
target_link_libraries(bernsteintest confnurbs)
target_link_libraries(beziertest confnurbs)
target_link_libraries(galerkinquadraturetest confnurbs)
target_link_libraries(bezierextractiontest confnurbs)

add_test(hbsreadtest hbsreadtest ${confnurbs_SOURCE_DIR}/input/sphere.dat)
add_test(boundingboxtest bbtest ${confnurbs_SOURCE_DIR}/input/sphere.dat)
add_test(bernsteintest bernsteintest)
add_test(beziertest beziertest)
add_test(galerkinquadraturetest galerkinquadraturetest)
add_test(bezierextractiontest bezierextractiontest)
